# Project_NAVI

./: README.md  dynamixel_profile_setting_code_copy
ARDUINO/navi_proto_openrb_code/: navi_proto_openrb_code.ino
ROBOTIS/DynamixelSDK/ros/dynamixel_sdk_examples/: CMakeLists.txt  package.xml
ROBOTIS/DynamixelSDK/ros/dynamixel_sdk_examples/msg/: BulkSetItem.msg  SetPosition.msg
ROBOTIS/DynamixelSDK/ros/dynamixel_sdk_examples/src/: bulk_read_write_node.cpp  dynamicxel_test.cpp  indirect_address_node.cpp  navi_dynamixel_down_node.cpp  navi_dynamixel_middle_node.cpp  read_write_node.cpp  read_write_node.py
ROBOTIS/dynamixel-workbench/dynamixel_workbench_controllers/config/: basic.yaml  joint_2_0.yaml
ROBOTIS/dynamixel-workbench/dynamixel_workbench_controllers/launch/: dynamixel_controllers.launch
navi_control_main/: CMakeLists.txt  package.xml
navi_control_main/config/: base_position.yaml
navi_control_main/include/navi_control_main/: navi_control_main_node.h
navi_control_main/launch/: navi_arduino.launch  navi_dynamixel.launch  navi_main.launch
navi_control_main/src/: navi_control_main_node.cpp
navi_display/: CMakeLists.txt  package.xml
navi_display/config/: eye_data.yaml  eye_data_minions.yaml  eye_data_thomas.yaml  gif_data.yaml
navi_display/include/navi_display/: navi_display_head_node.h
navi_display/launch/: navi_face_display.launch
navi_display/src/: navi_display_head_node.cpp
navi_motor_control/navi_control_dynamixel/: CHANGELOG.rst  CMakeLists.txt  package.xml
navi_motor_control/navi_control_dynamixel/config/: vel_and_acc.yaml
navi_motor_control/navi_control_dynamixel/msg/: SyncSetPosition.msg
navi_motor_control/navi_control_dynamixel/src/: navi_dynamixel_down_node.cpp  navi_dynamixel_middle_node.cpp  navi_dynamixel_up_node.cpp
navi_motor_control/navi_control_dynamixel/srv/: BulkGetItem.srv  GetPosition.srv  SyncGetPosition.srv
navi_motor_control/navi_control_test_arduino/src/: navi_control_test_arduino_node.cpp
navi_motor_control/navi_control_test_dynamixel/include/navi_control_test_dynamixel/: navi_control_test_dynamixel_node.h
navi_motor_control/navi_control_test_dynamixel/src/: navi_control_test_dynamixel_node.cpp
navi_msgs/navi_humanoid_msgs/: CMakeLists.txt
navi_msgs/navi_humanoid_msgs/msg/: Hands.msg  Humanoid.msg
navi_msgs/navi_old_humanoid_msgs/: CMakeLists.txt
navi_msgs/navi_old_humanoid_msgs/msg/: Hand.msg  Handmsg  Humanoid.msg
navi_others/ARDUINO/navi_hand_finger_code/: navi_hand_finger_code.ino
navi_others/ARDUINO/navi_mobile_robot_code/: navi_mobile_robot_code.ino
navi_others/ARDUINO/navi_mobile_robot_motor_test/: navi_mobile_robot_motor_test.ino
navi_others/md/launch/: md_robot_node.launch
navi_video_streaming/: CMakeLists.txt  package.xml
navi_video_streaming/include/navi_video_streaming/: resized_publisher.h  resized_subscriber.h
navi_video_streaming/src/: manifest.cpp  navi_video_recieve_node.cpp  navi_video_streaming_node.cpp  resized_publisher.cpp  resized_subscriber.cpp
