<package>
  <name>navi_display</name>
  <version>0.0.0</version>
  <description>NAVI Display Head Image Package</description>
  <author>eking158</author>
  <maintainer email="eking158@naver.com">eking158</maintainer>
  <license>Apache 2.0</license>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <image_transport plugin="${prefix}/resized_plugins.xml"/>
  </export>
</package>
